# MultivariateStatistics02409

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile
docs/source/: api_reference.rst  cheatsheet.rst  conf.py  index.rst
docs/source/_static/: custom.css
exams/2019/: README.rst  plot_p1_regression.py  plot_p2_cca.py  plot_p3_model_selection.py  plot_p4_discriminant.py  plot_p5_factor_analysis.py  plot_p6_theory.py
exams/2019/data/: BiblioFactor2019.csv  Bibliotek2019.csv  KrimBiblio2019.csv  Uddannelse2019.csv
exams/2024/: README.rst  plot_p1.py  plot_p2.py  plot_p3.py  plot_p4.py  plot_p5.py  plot_p6_theory.py
src/multistat/: __init__.py  descriptive.py  hypothesis.py  multivariate.py  plotting.py  regression.py
