[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multistat"
version = "0.1.0"
description = "Tools for 02409 Multivariate Statistics exam - Python implementation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Philip Korsager Nickel", email = "s214960@dtu.dk" }
]

dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    # Statistics and machine learning
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "pingouin>=0.5.4",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Documentation
    "sphinx>=7.0.0",
    "pydata-sphinx-theme>=0.14.0",
    "numpydoc>=1.6.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-gallery>=0.14.0",
    "pillow>=10.0.0",
    # Development
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "ipykernel>=6.29.0",
    "sympy>=1.14.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "NPY"]
ignore = ["E501"]  # Line length handled separately
